<resources>
    <string name="app_name">Retail Store</string>
    <string name="no_products">No Products</string>
    <string name="product_details">Product Details</string>
    <string name="category_string">"Category: "</string>
    <string name="rupee">"₹ "</string>
    <string name="price">"Price: ₹ "</string>
    <string name="price_string">Price</string>
    <string name="description">Description:\n</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="added_to_cart">Added to Cart</string>
    <string name="cart">Cart</string>
    <string name="no_products_cart">No Product in Cart</string>
    <string name="price_details">Price Details</string>
    <string name="amount_payable">Total Amount Payable</string>
    <string name="delivery">Delivery</string>
    <string name="free">Free</string>
    <string name="dash_slash">/-</string>
    <string name="already_added_in_cart">Already added in Cart</string>
    <string name="deleted_from_cart">Item deleted successfully</string>
    <string-array name="spinner_array">
        <item>"ALL PRODUCTS"</item>
        <item>"ELECTRONICS"</item>
        <item>"FURNITURE"</item>
        </string-array>>
    <string-array name="product_name">
        <item>"Microwave oven"</item>
        <item>"Television"</item>
        <item>"Vacuum Cleaner"</item>
        <item>"Iron"</item>
        <item>"Table"</item>
        <item>"Chair"</item>
        <item>"Almirah"</item>
        <item>"Double Bed"</item>
        <item>"Bean Bag"</item>
    </string-array>
    <integer-array name="product_price">
        <item>10000</item>
        <item>35000</item>
        <item>8000</item>
        <item>2000</item>
        <item>5000</item>
        <item>1500</item>
        <item>3500</item>
        <item>12000</item>
        <item>700</item>
    </integer-array>
    <string-array name="product_details">
        <item>"Microwave oven"</item>
        <item>"Television"</item>
        <item>"Vacuum Cleaner"</item>
        <item>"Iron"</item>
        <item>"Table"</item>
        <item>"Chair"</item>
        <item>"Almirah"</item>
        <item>"Double Bed"</item>
        <item>"Bean Bag"</item>
    </string-array>
    <integer-array name="product_category">
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>2</item>
        <item>2</item>
        <item>2</item>
        <item>2</item>
        <item>2</item>
    </integer-array>
    <string-array name="image_names">
        <item>"@drawable/microwave"</item>
        <item>"@drawable/tv"</item>
        <item>"@drawable/vaccum"</item>
        <item>"@drawable/iron"</item>
        <item>"@drawable/table"</item>
        <item>"@drawable/chair"</item>
        <item>"@drawable/almirah"</item>
        <item>"@drawable/bed"</item>
        <item>"@drawable/beanbag"</item>
    </string-array>
</resources>
