<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="product"
            type="com.retailstore.Product" />
    </data>

    <LinearLayout
        android:id="@+id/llDetailsMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/details_margin_top"
            android:layout_weight="3"
            android:padding="@dimen/list_item_padding"
            android:scaleType="fitCenter"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_margin_top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text='@{product == null ? "" : product.name}'
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/list_item_padding"
                    android:layout_marginTop="@dimen/list_item_padding"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category_string"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{product == null ? "" : com.retailstore.Constants.PRODUCT_CATEGORY.values()[product.getCategory].name()}'
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/list_item_padding"
                    android:layout_marginTop="@dimen/list_item_padding"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{product == null ? "" : Integer.toString(product.price)}'
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/list_item_padding"
                    android:layout_marginTop="@dimen/list_item_padding"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{product == null ? "" : product.details}'
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/btnBuy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/list_background"
                android:text="@string/buy_now"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnCart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/colorAccent"
                android:text="@string/add_to_cart"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</layout>